Add initial files

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,24 +13,24 @@ body {
 }
 
 .slider {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
   height: 300px;
+  box-shadow: 3px 3px 10px rgba(0,0,0,.2);
 }
 
-#window {
+.wrapper {
   overflow: hidden;
   position: relative;
   width: 400px;
   height: 300px;
-  box-shadow: 3px 3px 10px rgba(0,0,0,.2);
   z-index: 1;
 }
 
-#wrapper {
+.slides {
   display: flex;
   position: relative;
   top: 0;
@@ -38,7 +38,7 @@ body {
   width: 10000px;
 }
 
-#wrapper.shifting {
+.slides.shifting {
   transition: left .2s ease-out;
 }
 
@@ -51,24 +51,35 @@ body {
   justify-content: center;
   transition: all 1s;
   position: relative;
+  background: #FFCF47;
   border-radius: 2px;
-  background: #3CFF96;
+}
+
+.slider.loaded {
+  .slide:nth-child(2),
+  .slide:nth-child(7) { background: #FFCF47 }
+  .slide:nth-child(1),
+  .slide:nth-child(6) { background: #7ADCEF }
+  .slide:nth-child(3) { background: #3CFF96 }
+  .slide:nth-child(4) { background: #a78df5 }
+  .slide:nth-child(5) { background: #ff8686 }
 }
 
 .control {
-  display: block;
+  position: absolute;
+  top: 50%;
   width: 50px;
   height: 50px;
-  border-radius: 50px;
   background: #fff;
+  border-radius: 50px;
+  margin-top: -20px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 2;
 }
 
 .prev,
 .next {
-  position: relative;
-  background-size: 20px;
+  background-size: 22px;
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
@@ -76,15 +87,15 @@ body {
 
 .prev {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
-  left: 25px;
+  left: -20px;
 }
 
 .next {
   background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
-  right: 25px;
+  right: -20px;
 }
 
 .prev:active,
 .next:active {
-  transform: scale(.9);
+  transform: scale(.8);
 }
