--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,12 +13,18 @@ body {
 }
 
 .slider {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-drag: none;
 }
 
 .wrapper {
@@ -26,15 +32,17 @@ body {
   position: relative;
   width: 375px;
   height: auto;
-  z-index: 1;
+  z-index: 2;
 }
 
 .slides {
-  display: flex;
-  position: relative;
   top: 0;
-  left: -340px;
+  left: -335px;
+  position: relative;
+  display: flex;
   width: 10000px;
+  padding: 10px 0;
+  z-index: 1;
 }
 
 .slides.shifting {
@@ -53,17 +61,24 @@ body {
   cursor: pointer;
   transition: all 1s;
   background: #FFCF47;
-  box-shadow: 3px 3px 10px rgba(0,0,0,.2);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, .6);
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-drag: none;
 }
 
 .control {
   position: relative;
   width: 50px;
   height: 50px;
+  border: none;
+  outline: none;
   border-radius: 50px;
   background: #fff;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 3;
 }
 
 .prev,
@@ -87,4 +102,14 @@ body {
 .prev:active,
 .next:active {
   transform: scale(.9);
+}
+
+.paging {
+  top: 100%;
+  position: absolute;
+  display: block;
+  width: 200px;
+  height: 30px;
+  background: #ff0;
+  z-index: 3;
 }
