--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-* { box-sizing: border-box; }
-
-body {
-  height: 100%;
-  background-color: #7656d6;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-  letter-spacing: 0.15em;
-  font-size: 22px;
-}
-
 #container {
   position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: auto;
   height: auto;
+}
+
+#container * {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -30,7 +19,6 @@ body {
 #view {
   overflow: hidden;
   position: relative;
-  width: 375px;
   height: auto;
   z-index: 2;
 }
@@ -39,7 +27,6 @@ body {
   top: 0;
   position: relative;
   display: flex;
-  width: 10000px;
   padding: 10px 0;
   z-index: 1;
 }
@@ -50,57 +37,43 @@ body {
 
 .slide {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 325px;
-  height: 250px;
   margin: 0 5px;
   border-radius: 8px;
   cursor: pointer;
   transition: all 1s;
-  background: #FFCF47;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, .6);
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-drag: none;
 }
 
-.slide.clone.hide { visibility: hidden; }
+.slide.clone.hide {
+  visibility: hidden;
+}
 
 .control {
   position: relative;
-  width: 50px;
-  height: 50px;
+  width: 24px;
+  height: 24px;
   border: none;
   outline: none;
   border-radius: 50px;
-  background: #fff;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 3;
 }
 
 .control.prev.hide,
-.control.next.hide { visibility: hidden; }
+.control.next.hide {
+  visibility: hidden;
+}
 
 .prev,
 .next {
-  background-size: 20px;
-  background-position: center;
-  background-repeat: no-repeat;
   cursor: pointer;
-}
-
-.prev {
-  background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronLeft-512.png);
-  left: 22px;
+  background: url('../assets/arrow.png');
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 90%;
+  background-color: var(--primary-purple);
 }
 
 .next {
-  background-image: url(https://cdn0.iconfinder.com/data/icons/navigation-set-arrows-part-one/32/ChevronRight-512.png);
-  right: 22px;
+  transform: rotate(180deg);
 }
 
 .prev:active,
@@ -108,15 +81,18 @@ body {
   transform: scale(.9);
 }
 
+.next:active { transform: rotate(180deg); }
+
 .paging {
   position: absolute;
-  top: 100%;
+  top: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   width: auto;
   height: auto;
+  margin: 25px 0 0;
   background: transparent;
   z-index: 3;
 }
@@ -128,7 +104,7 @@ body {
   margin: 0 2px;
   border: none;
   border-radius: 50%;
-  background-color: #FFCF47;
+  background-color: var(--primary-purple);
   filter: opacity(.35);
   outline: none;
   cursor: pointer;
