Add slides to shift option

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,17 +43,13 @@
   transition: all 1s;
 }
 
-.slide.clone.hide {
-  visibility: hidden;
-}
-
 .control {
   position: relative;
   width: 24px;
   height: 24px;
   border: none;
   outline: none;
-  border-radius: 50px;
+  border-radius: 50%;
   z-index: 3;
 }
 
@@ -69,7 +65,6 @@
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 90%;
-  background-color: var(--primary-purple);
 }
 
 .next {
@@ -104,7 +99,6 @@
   margin: 0 2px;
   border: none;
   border-radius: 50%;
-  background-color: var(--primary-purple);
   filter: opacity(.35);
   outline: none;
   cursor: pointer;
@@ -112,4 +106,29 @@
 
 .paging .index.active {
   filter: opacity(1);
+}
+
+/* element custom */
+html,
+body {
+  background-color: #b3f542;
+}
+
+.slide {
+  display: flex;
+  min-width: 300px;
+  height: 200px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+}
+
+.control {
+  display: block;
+  background-color: #e642f5;
+}
+
+.paging .index {
+  background-color: #e642f5;
 }
