--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-#container {
+#container, #container-2 {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -6,9 +6,10 @@
   justify-content: center;
   width: auto;
   height: auto;
+  margin-bottom: 100px;
 }
 
-#container * {
+#container *, #container * {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -16,7 +17,7 @@
   -webkit-user-drag: none;
 }
 
-#view {
+#view, #view-2 {
   overflow: hidden;
   position: relative;
   height: auto;
@@ -24,11 +25,11 @@
   cursor: grab;
 }
 
-#view.grabbing {
+#view.grabbing, #view-2.grabbing{
   cursor: grabbing;
 }
 
-#wrapper {
+#wrapper, #wrapper-2 {
   top: 0;
   position: relative;
   display: flex;
@@ -36,15 +37,8 @@
   z-index: 1;
 }
 
-#wrapper.shifting {
+#wrapper.shifting, #wrapper-2.shifting {
   transition: left .3s ease-out;
-}
-
-.slide {
-  position: relative;
-  margin: 0 5px;
-  border-radius: 8px;
-  transition: all 1s;
 }
 
 .control {
@@ -118,14 +112,18 @@ body {
   background-color: #b3f542;
 }
 
-.slide {
+.slide, .slide-2 {
   display: flex;
-  min-width: 300px;
-  height: 200px;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  position: relative;
+  min-width: 300px;
+  height: 200px;
+  margin: 0 5px;
   background-color: #fff;
+  border-radius: 8px;
+  transition: all 1s;
 }
 
 .control {
